--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppHuevos">
-        <activity android:name=".Registro"></activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".InsercionHuevo"></activity>
+        <activity android:name=".Registro" />
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
